# qaas

./: .dockerignore  .env.example  .gitignore  .tool-versions  CHANGELOG.md  Dockerfile  Dockerfile.postgres  Makefile  README.md  app.py  crawler.py  db.json  docker-compose.yml  package-lock.json  pyproject.toml  railway.json  render.yaml  render.yml  requirements.txt  startup.sh  taskfile.yml
.devcontainer/: .dockerignore  devcontainer.json
.github/workflows/: automerge.yml  container.yml  release-please.yml
static/: styles.css
templates/: index.html
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  provider.tf  variables.tf
